build: add SpotBugs + Find-Security-Bugs (bytecode bug/security analysis)
Bound to verify (fails on findings). Chose SpotBugs over Error Prone: Error Prone
needs jdk.compiler --add-exports javac flags (a workaround we removed) and lags new
JDKs; SpotBugs reads bytecode and is clean on Java 25. spotbugs-exclude.xml carries a
small, documented exclude list for idiomatic Panache/record patterns
(CT_CONSTRUCTOR_THROW on requireNonNull constructors, EI_EXPOSE_REP on record DTOs).
Hardened CallerContext with a defensive Set.copyOf. Docs updated.